[package]
name = "somerville"
version = "0.0.0"
description = "An early-stage, work-in-progress, multi-media conversion application with graphical and command-line interfaces."
authors = ["Venus Xeon-Blonde"]
license = "MIT"
reposirtory = "https://github.com/vcfxb/somerville"
documentation = "https://docs.rs/somerville"
edition = "2021"

[dependencies]
